@@ -1,3 +1,6 @@
+Upcoming:
+- Fixed a problem with shapecards becoming somewhat inconsistant if they are upgraded in the middle of selecting an area using the two corner points
+
 1.16-3.0.11:
 - Fixed crashes with the Builder in combination with liquids
 
